# pubmed-buddy

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
pmbuddy/: __main__.py  cli.py  spider.py
pmbuddy/config/: __init__.py
pmbuddy/data/: request.toml  urls.toml
pmbuddy/helpers/: __init__.py
pmbuddy/models/: __init__.py
pmbuddy/parsers/: Pubmed.py  __init__.py
pmbuddy/util/: __init__.py  display.py  requests.py  validation.py
tests/: test_config.py
tests/util/: test_validation.py
